improve: aplicar melhores praticas

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <li><a class="button-main register" href="#">register</a></li>
             <li>
               <div id="navMobile" class="overlay">
-                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                <span class="closebtn" onclick="closeNav()">&times;</span>
                 <div class="overlay-content">
                   <a href="#">Services</a>
                   <a href="#about">About</a>
@@ -55,9 +55,9 @@
                   <a href="#">Register</a>
                 </div>
               </div>
-              <a onclick="openNav()">
+              <span class="icon-menu-hamburguer" onclick="openNav()">
                 <i class="bi-list"></i>
-              </a>
+              </span>
             </li>
           </ul>
         </nav>
@@ -69,17 +69,17 @@
           <p>We help businesses like yours earn more customers, standout from competitors, make more money</p>
           <button class="button-main">get started</button>
         </article>
-        <img data-anime="100" class="fadeInDown" src="./img/banner-hero.png" alt="Banner">
+        <img data-anime="100" class="fadeInDown" src="./img/banner-hero.png" alt="Banner" loading="lazy">
       </div>
     </div>
 
     <div class="tools">
       <div class="container-tools">
-        <img class="fadeInLeft" data-anime="300" src="./img/business-tools/google.png" alt="icon google" class="tools-items tools-item__google">
-        <img class="fadeInLeft" data-anime="300" src="./img/business-tools/trello.png" alt="icon trello" class="tools-items tools-item__trello">
-        <img class="fadeInDown" data-anime="300" src="./img/business-tools/monday.png" alt="icon monday" class="tools-items tools-item__monday">
-        <img class="fadeInRight" data-anime="300" src="./img/business-tools/notion.png" alt="icon notion" class="tools-items tools-item__notion">
-        <img class="fadeInRight" data-anime="300" src="./img/business-tools/slack.png" alt="icon slack" class="tools-items tools-item__slack">
+        <img class="fadeInLeft" data-anime="300" src="./img/business-tools/google.png" alt="icon google" class="tools-items tools-item__google" loading="lazy">
+        <img class="fadeInLeft" data-anime="300" src="./img/business-tools/trello.png" alt="icon trello" class="tools-items tools-item__trello" loading="lazy">
+        <img class="fadeInDown" data-anime="300" src="./img/business-tools/monday.png" alt="icon monday" class="tools-items tools-item__monday" loading="lazy">
+        <img class="fadeInRight" data-anime="300" src="./img/business-tools/notion.png" alt="icon notion" class="tools-items tools-item__notion" loading="lazy">
+        <img class="fadeInRight" data-anime="300" src="./img/business-tools/slack.png" alt="icon slack" class="tools-items tools-item__slack" loading="lazy">
       </div>
       <div class="divider-tools"></div>
     </div>
@@ -94,7 +94,7 @@
       <div class="services">
         <div class="services-card">
           <div data-anime="100" class="fadeInDown">
-            <img src="./img/icon/activity.png" alt="imagem do portfolio">
+            <img src="./img/icon/activity.png" alt="imagem do portfolio" loading="lazy">
             <h3>Grow Your Business</h3>
             <p>We help identify the best ways to improve your business</p>
           </div>
@@ -104,7 +104,7 @@
         </div>
         <div class="services-card">
           <div data-anime="100" class="fadeInDown">
-            <img src="./img/icon/heart.png" alt="icone de coração">
+            <img src="./img/icon/heart.png" alt="icone de coração" loading="lazy">
             <h3>Improve brand loyalty</h3>
             <p>We help identify the best ways to improve your business</p>
           </div>
@@ -114,7 +114,7 @@
         </div>
         <div class="services-card">
           <div data-anime="100" class="fadeInDown">
-            <img src="./img/icon/work.png" alt="icone de mala de trabalho">
+            <img src="./img/icon/work.png" alt="icone de mala de trabalho" loading="lazy">
             <h3>Improve Business Model</h3>
             <p>We help identify the best ways to improve your business</p>
           </div>
@@ -130,28 +130,28 @@
     <div class="container">
       <div class="numbers fadeInDown" data-anime="100">
         <figure>
-          <img src="./img/icon/project-plan.png" alt="icone de projetos">
+          <img src="./img/icon/project-plan.png" alt="icone de projetos" loading="lazy">
           <figcaption>Completed Projects</figcaption>
         </figure>
         <div><span class="number">100</span> +</div>
       </div>
       <div class="numbers fadeInDown" data-anime="100">
         <figure>
-          <img src="./img/icon/rating.png" alt="icone de avaliação">
+          <img src="./img/icon/rating.png" alt="icone de avaliação" loading="lazy">
           <figcaption>Customer Satisfaction</figcaption>
         </figure>
         <div><span class="number">80</span> %</div>
       </div>
       <div class="numbers fadeInDown" data-anime="100">
         <figure>
-          <img src="./img/icon/raise.png" alt="icone de aumento">
+          <img src="./img/icon/raise.png" alt="icone de aumento" loading="lazy">
           <figcaption>Raised by Clients</figcaption>
         </figure>
         <div>$ <span class="number">10</span>M</div>
       </div>
       <div class="numbers fadeInDown" data-anime="100">
         <figure>
-          <img src="./img/icon/timeline.png" alt="icone de tempo">
+          <img src="./img/icon/timeline.png" alt="icone de tempo" loading="lazy">
           <figcaption>Years in Business</figcaption>
         </figure>
         <div><span class="number">14 </span> yrs</div>
@@ -169,7 +169,7 @@
         <div class="portfolio-column-1">
           <div class="portfolio-item fadeInDown" data-anime="100">
             <figure>
-              <img src="./img/portfolio/portfolio-1.png" class="portfolio-img-1" alt="imagem do portfolio">
+              <img src="./img/portfolio/portfolio-1.jpg" class="portfolio-img-1" alt="imagem do portfolio" loading="lazy">
               <figcaption>
                 <h3>Digital Marketing Agency Website</h3>
                 <p>This is a website for a client who want to achieve their goals and meet their users needs while also increasing their reach. Accross all platforms. This is a website rebrand</p>
@@ -178,7 +178,7 @@
           </div>
           <div class="portfolio-item fadeInDown" data-anime="100">
             <figure>
-              <img src="./img/portfolio/portfolio-3.png" class="portfolio-img-3" alt="imagem do portfolio">
+              <img src="./img/portfolio/portfolio-3.png" class="portfolio-img-3" alt="imagem do portfolio" loading="lazy">
               <figcaption>
                 <h3>Digital Marketing Agency Website</h3>
                 <p>This is a website for a client who want to achieve their goals and meet their users needs while also increasing their reach. Accross all platforms. This is a website rebrand</p>
@@ -190,7 +190,7 @@
         <div class="portfolio-column-2">
           <div class="portfolio-item fadeInDown" data-anime="100">
             <figure>
-              <img src="./img/portfolio/portfolio-2.png" class="portfolio-img-2" alt="imagem do portfolio">
+              <img src="./img/portfolio/portfolio-2.jpg" class="portfolio-img-2" alt="imagem do portfolio" loading="lazy">
               <figcaption>
                 <h3>Digital Marketing Agency Website</h3>
                 <p>This is a website for a client who want to achieve their goals and meet their users needs while also increasing their reach. Accross all platforms. This is a website rebrand</p>
@@ -199,7 +199,7 @@
           </div>
           <div class="portfolio-item fadeInDown" data-anime="100">
             <figure>
-              <img src="./img/portfolio/portfolio-4.png" class="portfolio-img-4" alt="imagem do portfolio">
+              <img src="./img/portfolio/portfolio-4.png" class="portfolio-img-4" alt="imagem do portfolio" loading="lazy">
               <figcaption>
                 <h3>Digital Marketing Agency Website</h3>
                 <p>This is a website for a client who want to achieve their goals and meet their users needs while also increasing their reach. Accross all platforms. This is a website rebrand</p>
@@ -219,15 +219,15 @@
           <h2>See what our customer <br> say about us</h2>
         </div>
         <div class="slider-control fadeInRight" data-anime="100">
-          <button class=" return"><img src="./img/icon/arrow-left-bold.png" alt="icone controle esquerda"></button>
-          <button class="advance"><img src="./img/icon/arrow-right-bold.png" alt="icone controle direita"></button>
+          <button class=" return"><img src="./img/icon/arrow-left-bold.png" alt="icone controle esquerda" loading="lazy"></button>
+          <button class="advance"><img src="./img/icon/arrow-right-bold.png" alt="icone controle direita" loading="lazy"></button>
         </div>
       </header>
       <div class="testimonial fadeInRight" data-anime="300">
         <div class="testimonial-card">
           <p>Thank You for your service. I am very pleased with the result. I have seen exponencial growth in my business and its all thanks to your amazing service</p>
           <div class="avatar">
-            <img src="./img/avatar/avatar-woman.png" alt="avatar">
+            <img src="./img/avatar/avatar-woman.png" alt="avatar" loading="lazy">
             <div>
               <h3>Emily Stones</h3>
               <p>CEO, Marketing Guru</p>
@@ -237,7 +237,7 @@
         <div class="testimonial-card">
           <p>Thank You for your service. I am very pleased with the result. I have seen exponencial growth in my business and its all thanks to your amazing service</p>
           <div class="avatar">
-            <img src="./img/avatar/avatar-woman.png" alt="avatar">
+            <img src="./img/avatar/avatar-woman.png" alt="avatar" loading="lazy">
             <div>
               <h3>Emily Stones</h3>
               <p>CEO, Marketing Guru</p>
@@ -247,7 +247,7 @@
         <div class="testimonial-card">
           <p>Thank You for your service. I am very pleased with the result. I have seen exponencial growth in my business and its all thanks to your amazing service</p>
           <div class="avatar">
-            <img src="./img/avatar/avatar-woman.png" alt="avatar">
+            <img src="./img/avatar/avatar-woman.png" alt="avatar" loading="lazy">
             <div>
               <h3>Emily Stones</h3>
               <p>CEO, Marketing Guru</p>
@@ -285,16 +285,16 @@
             <p>Some footer text about the <br> Agency. Just a little description to <br> help people understand you better</p>
             <div class="social-media">
               <a href="https://www.facebook.com/" class="facebook" target="_blank" rel=”noopener noreferer”>
-                <img src="./img/icon/social media/facebook.png" alt="icone facebook">
+                <img src="./img/icon/social media/facebook.png" alt="icone facebook" loading="lazy">
               </a>
               <a href="https://twitter.com/" class="twitter" target="_blank" rel=”noopener noreferer”>
-                <img src="./img/icon/social media/twitter.png" alt="icone twitter">
+                <img src="./img/icon/social media/twitter.png" alt="icone twitter" loading="lazy">
               </a>
               <a href="https://www.linkedin.com/" class="linkedin" target="_blank" rel=”noopener noreferer>
-                <img src="./img/icon/social media/linkedin.png" alt="icone linkedin">
+                <img src="./img/icon/social media/linkedin.png" alt="icone linkedin" loading="lazy">
               </a>
               <a href="https://www.instagram.com/" class="instagram" target="_blank" rel=”noopener noreferer”>
-                <img src="./img/icon/social media/instagram.png" alt="icone instagram">
+                <img src="./img/icon/social media/instagram.png" alt="icone instagram" loading="lazy">
               </a>
             </div>
           </div>
