--- a/index.html
+++ b/index.html
@@ -69,17 +69,17 @@
           <p>We help businesses like yours earn more customers, standout from competitors, make more money</p>
           <button class="button-main">get started</button>
         </article>
-        <img data-anime="100" class="fadeInDown" src="./img/banner-hero.png" alt="Banner" loading="lazy">
+        <img data-anime="100" class="fadeInDown" src="./img/banner-hero.png" alt="Banner" width="692" height="572" loading="lazy">
       </div>
     </div>
 
     <div class="tools">
       <div class="container-tools">
-        <img class="fadeInLeft" data-anime="300" src="./img/business-tools/google.png" alt="icon google" class="tools-items tools-item__google" loading="lazy">
-        <img class="fadeInLeft" data-anime="300" src="./img/business-tools/trello.png" alt="icon trello" class="tools-items tools-item__trello" loading="lazy">
-        <img class="fadeInDown" data-anime="300" src="./img/business-tools/monday.png" alt="icon monday" class="tools-items tools-item__monday" loading="lazy">
-        <img class="fadeInRight" data-anime="300" src="./img/business-tools/notion.png" alt="icon notion" class="tools-items tools-item__notion" loading="lazy">
-        <img class="fadeInRight" data-anime="300" src="./img/business-tools/slack.png" alt="icon slack" class="tools-items tools-item__slack" loading="lazy">
+        <img src="./img/business-tools/google.png" alt="icon google" class="tools-items tools-item__google" loading="lazy">
+        <img src="./img/business-tools/trello.png" alt="icon trello" class="tools-items tools-item__trello" loading="lazy">
+        <img src="./img/business-tools/monday.png" alt="icon monday" class="tools-items tools-item__monday" loading="lazy">
+        <img src="./img/business-tools/notion.png" alt="icon notion" class="tools-items tools-item__notion" loading="lazy">
+        <img src="./img/business-tools/slack.png" alt="icon slack" class="tools-items tools-item__slack" loading="lazy">
       </div>
       <div class="divider-tools"></div>
     </div>
@@ -94,7 +94,9 @@
       <div class="services">
         <div class="services-card">
           <div data-anime="100" class="fadeInDown">
-            <img src="./img/icon/activity.png" alt="imagem do portfolio" loading="lazy">
+            <div class="services-icon">
+              <img src="./img/icon/activity.png" alt="imagem do portfolio" loading="lazy" width="34" height="34">
+            </div>
             <h3>Grow Your Business</h3>
             <p>We help identify the best ways to improve your business</p>
           </div>
@@ -104,7 +106,9 @@
         </div>
         <div class="services-card">
           <div data-anime="100" class="fadeInDown">
-            <img src="./img/icon/heart.png" alt="icone de coração" loading="lazy">
+            <div class="services-icon">
+              <img src="./img/icon/heart.png" alt="icone de coração" loading="lazy" width="34" height="32">
+            </div>
             <h3>Improve brand loyalty</h3>
             <p>We help identify the best ways to improve your business</p>
           </div>
@@ -114,7 +118,9 @@
         </div>
         <div class="services-card">
           <div data-anime="100" class="fadeInDown">
-            <img src="./img/icon/work.png" alt="icone de mala de trabalho" loading="lazy">
+            <div class="services-icon">
+              <img src="./img/icon/work.png" alt="icone de mala de trabalho" loading="lazy" width="34" height="33">
+            </div>
             <h3>Improve Business Model</h3>
             <p>We help identify the best ways to improve your business</p>
           </div>
