--- a/index.html
+++ b/index.html
@@ -136,28 +136,28 @@
     <div class="container">
       <div class="numbers fadeInDown" data-anime="100">
         <figure>
-          <img src="./img/icon/project-plan.png" alt="icone de projetos" loading="lazy">
+          <img src="./img/icon/project-plan.png" alt="icone de projetos" loading="lazy" width="70" height="71">
           <figcaption>Completed Projects</figcaption>
         </figure>
         <div><span class="number">100</span> +</div>
       </div>
       <div class="numbers fadeInDown" data-anime="100">
         <figure>
-          <img src="./img/icon/rating.png" alt="icone de avaliação" loading="lazy">
+          <img src="./img/icon/rating.png" alt="icone de avaliação" loading="lazy" width="70" height="71">
           <figcaption>Customer Satisfaction</figcaption>
         </figure>
         <div><span class="number">80</span> %</div>
       </div>
       <div class="numbers fadeInDown" data-anime="100">
         <figure>
-          <img src="./img/icon/raise.png" alt="icone de aumento" loading="lazy">
+          <img src="./img/icon/raise.png" alt="icone de aumento" loading="lazy" width="71" height="71">
           <figcaption>Raised by Clients</figcaption>
         </figure>
         <div>$ <span class="number">10</span>M</div>
       </div>
       <div class="numbers fadeInDown" data-anime="100">
         <figure>
-          <img src="./img/icon/timeline.png" alt="icone de tempo" loading="lazy">
+          <img src="./img/icon/timeline.png" alt="icone de tempo" loading="lazy" width="71" height="71">
           <figcaption>Years in Business</figcaption>
         </figure>
         <div><span class="number">14 </span> yrs</div>
@@ -175,7 +175,7 @@
         <div class="portfolio-column-1">
           <div class="portfolio-item fadeInDown" data-anime="100">
             <figure>
-              <img src="./img/portfolio/portfolio-1.jpg" class="portfolio-img-1" alt="imagem do portfolio" loading="lazy">
+              <img src="./img/portfolio/portfolio-1.jpg" class="portfolio-img-1" alt="imagem do portfolio" loading="lazy" width="561" height="343">
               <figcaption>
                 <h3>Digital Marketing Agency Website</h3>
                 <p>This is a website for a client who want to achieve their goals and meet their users needs while also increasing their reach. Accross all platforms. This is a website rebrand</p>
@@ -184,7 +184,7 @@
           </div>
           <div class="portfolio-item fadeInDown" data-anime="100">
             <figure>
-              <img src="./img/portfolio/portfolio-3.png" class="portfolio-img-3" alt="imagem do portfolio" loading="lazy">
+              <img src="./img/portfolio/portfolio-3.png" class="portfolio-img-3" alt="imagem do portfolio" loading="lazy" width="561" height="523">
               <figcaption>
                 <h3>Digital Marketing Agency Website</h3>
                 <p>This is a website for a client who want to achieve their goals and meet their users needs while also increasing their reach. Accross all platforms. This is a website rebrand</p>
@@ -196,7 +196,7 @@
         <div class="portfolio-column-2">
           <div class="portfolio-item fadeInDown" data-anime="100">
             <figure>
-              <img src="./img/portfolio/portfolio-2.jpg" class="portfolio-img-2" alt="imagem do portfolio" loading="lazy">
+              <img src="./img/portfolio/portfolio-2.jpg" class="portfolio-img-2" alt="imagem do portfolio" loading="lazy" width="562" height="522">
               <figcaption>
                 <h3>Digital Marketing Agency Website</h3>
                 <p>This is a website for a client who want to achieve their goals and meet their users needs while also increasing their reach. Accross all platforms. This is a website rebrand</p>
@@ -205,7 +205,7 @@
           </div>
           <div class="portfolio-item fadeInDown" data-anime="100">
             <figure>
-              <img src="./img/portfolio/portfolio-4.png" class="portfolio-img-4" alt="imagem do portfolio" loading="lazy">
+              <img src="./img/portfolio/portfolio-4.png" class="portfolio-img-4" alt="imagem do portfolio" loading="lazy" width="554" height="339">
               <figcaption>
                 <h3>Digital Marketing Agency Website</h3>
                 <p>This is a website for a client who want to achieve their goals and meet their users needs while also increasing their reach. Accross all platforms. This is a website rebrand</p>
@@ -334,7 +334,7 @@
     </div>
   </footer>
 
-  <script type="module" src="./dist/bundle.js"></script>
+  <script type="module" src="./dist/bundle.js" defer></script>
 </body>
 
 </html>
