improve: adicionar link na secao tools, aumentar o tempo de animacao da mesma

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 </head>
 
 <body>
-  <section class="section-hero">
+  <section class="section-hero" data-anime="100" class="fadeInDown">
     <div class="container">
-      <header data-anime="100" class="fadeInDown">
+      <header>
         <nav>
-          <a class="logo" href="#">design<span>agency</span></a>
+          <a class="logo" href="/">design<span>agency</span></a>
           <ul class="menu" id="myLinks">
             <li class="dropdown">
               <a class="dropbtn" href="#">services &#11167;</a>
@@ -76,37 +76,57 @@
     <div class="tools">
       <div class="tools-group">
         <div class="tools-image">
-          <img src="./img/business-tools/google.png" alt="icon google" class="tools-items tools-item__google" loading="lazy">
+          <a href="https://www.google.com/" target="_blank" rel=”noopener noreferer”>
+            <img src="./img/business-tools/google.png" alt="icon google" class="tools-items tools-item__google" loading="lazy">
+          </a>
         </div>
         <div class="tools-image">
-          <img src="./img/business-tools/trello.png" alt="icon trello" class="tools-items tools-item__trello" loading="lazy">
+          <a href="https://trello.com/pt-BR" target="_blank" rel=”noopener noreferer”>
+            <img src="./img/business-tools/trello.png" alt="icon trello" class="tools-items tools-item__trello" loading="lazy">
+          </a>
         </div>
         <div class="tools-image">
-          <img src="./img/business-tools/monday.png" alt="icon monday" class="tools-items tools-item__monday" loading="lazy">
+          <a href="https://monday.com/" target="_blank" rel=”noopener noreferer”>
+            <img src="./img/business-tools/monday.png" alt="icon monday" class="tools-items tools-item__monday" loading="lazy">
+          </a>
         </div>
         <div class="tools-image">
-          <img src="./img/business-tools/notion.png" alt="icon notion" class="tools-items tools-item__notion" loading="lazy">
+          <a href="https://www.notion.so/" target="_blank" rel=”noopener noreferer”>
+            <img src="./img/business-tools/notion.png" alt="icon notion" class="tools-items tools-item__notion" loading="lazy">
+          </a>
         </div>
         <div class="tools-image">
-          <img src="./img/business-tools/slack.png" alt="icon slack" class="tools-items tools-item__slack" loading="lazy">
+          <a href="https://slack.com/" target="_blank" rel=”noopener noreferer”>
+            <img src="./img/business-tools/slack.png" alt="icon slack" class="tools-items tools-item__slack" loading="lazy">
+          </a>
         </div>
       </div>
 
       <div aria-hidden class="tools-group">
         <div class="tools-image">
-          <img src="./img/business-tools/google.png" alt="icon google" class="tools-items tools-item__google" loading="lazy">
+          <a href="https://www.google.com/" target="_blank" rel=”noopener noreferer”>
+            <img src="./img/business-tools/google.png" alt="icon google" class="tools-items tools-item__google" loading="lazy">
+          </a>
         </div>
         <div class="tools-image">
-          <img src="./img/business-tools/trello.png" alt="icon trello" class="tools-items tools-item__trello" loading="lazy">
+          <a href="https://trello.com/pt-BR" target="_blank" rel=”noopener noreferer”>
+            <img src="./img/business-tools/trello.png" alt="icon trello" class="tools-items tools-item__trello" loading="lazy">
+          </a>
         </div>
         <div class="tools-image">
-          <img src="./img/business-tools/monday.png" alt="icon monday" class="tools-items tools-item__monday" loading="lazy">
+          <a href="https://monday.com/" target="_blank" rel=”noopener noreferer”>
+            <img src="./img/business-tools/monday.png" alt="icon monday" class="tools-items tools-item__monday" loading="lazy">
+          </a>
         </div>
         <div class="tools-image">
-          <img src="./img/business-tools/notion.png" alt="icon notion" class="tools-items tools-item__notion" loading="lazy">
+          <a href="https://www.notion.so/" target="_blank" rel=”noopener noreferer”>
+            <img src="./img/business-tools/notion.png" alt="icon notion" class="tools-items tools-item__notion" loading="lazy">
+          </a>
         </div>
         <div class="tools-image">
-          <img src="./img/business-tools/slack.png" alt="icon slack" class="tools-items tools-item__slack" loading="lazy">
+          <a href="https://slack.com/" target="_blank" rel=”noopener noreferer”>
+            <img src="./img/business-tools/slack.png" alt="icon slack" class="tools-items tools-item__slack" loading="lazy">
+          </a>
         </div>
       </div>
     </div>
