improve: criar modal login e logout

--- a/index.html
+++ b/index.html
@@ -33,26 +33,26 @@
           <a class="logo" href="/">design<span>agency</span></a>
           <ul class="menu" id="myLinks">
             <li class="dropdown">
-              <a class="dropbtn" href="#">services &#11167;</a>
+              <a class="dropbtn">services &#11167;</a>
               <div class="dropdown-content">
-                <a href="#">Link 1</a>
-                <a href="#">Link 2</a>
-                <a href="#">Link 3</a>
+                <a href="#services">Link 1</a>
+                <a href="#services">Link 2</a>
+                <a href="#services">Link 3</a>
               </div>
             </li>
             <li><a class="about" href="#about">about us</a></li>
             <li><a class="contact" href="#contact">contact us</a></li>
-            <li><a class="button-outline" href="#">login</a></li>
-            <li><a class="button-main register" href="#">register</a></li>
+            <li><a class="button-outline openLoginModal">login</a></li>
+            <li><a class="button-main register openRegisterModal">register</a></li>
             <li>
               <div id="navMobile" class="overlay">
                 <span class="closebtn" onclick="closeNav()">&times;</span>
                 <div class="overlay-content">
-                  <a href="#">Services</a>
+                  <a href="#services">Services</a>
                   <a href="#about">About</a>
                   <a href="#contact">Contact</a>
-                  <a href="#">Login</a>
-                  <a href="#">Register</a>
+                  <a class="openLoginModal">Login</a>
+                  <a class="openRegisterModal">Register</a>
                 </div>
               </div>
               <span class="icon-menu-hamburguer" onclick="openNav()">
@@ -133,7 +133,7 @@
     <div class="divider-tools"></div>
   </section>
 
-  <main class="section-services">
+  <main class="section-services" id="about">
     <div class="container">
       <header data-anime="100" class="fadeInLeft">
         <h1>What we do</h1>
@@ -180,7 +180,7 @@
     </div>
   </main>
 
-  <section class="section-numbers">
+  <section class="section-numbers" id="numbers">
     <div class="container">
       <div class="numbers fadeInDown" data-anime="100">
         <figure>
@@ -213,7 +213,7 @@
     </div>
   </section>
 
-  <article class="section-portfolio">
+  <article class="section-portfolio" id="services">
     <div class="container">
       <header data-anime="100" class="fadeInLeft">
         <h1>Our Portfolio</h1>
@@ -330,7 +330,7 @@
     </div>
   </section>
 
-  <footer>
+  <footer id="contact">
     <div class="container">
       <div class="footer">
         <div class="footer-column-1">
@@ -358,16 +358,16 @@
           <h2 data-anime="200" class="fadeInLeft">Quick Links</h2>
           <ul data-anime="100" class="fadeInDown">
             <li>
-              <a href="#section-services">services</a>
+              <a href="#numbers">services</a>
             </li>
             <li>
-              <a href="#section-portfolio">portfolio</a>
+              <a href="#portfolio">portfolio</a>
             </li>
             <li>
-              <a href="#section-about">about us</a>
+              <a href="#about">about us</a>
             </li>
             <li>
-              <a href="#section-contact">contact us</a>
+              <a href="#contact">contact us</a>
             </li>
           </ul>
         </div>
@@ -381,6 +381,55 @@
       </div>
     </div>
   </footer>
+
+  <!-- Modal Login -->
+  <div class="modal" id="loginModal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <div class="logo" href="/">design<span>agency</span></div>
+      <p>Welcome back !!!</p>
+      <h1>Sing in</h1>
+      <form>
+        <label for="email">
+          <span>Email</span>
+        </label>
+        <input type="email" id="email" name="email" placeholder="email@gmail.com" required>
+        <label class="password" for="password">
+          <span>Password</span>
+          <span><a href="">Forgot Password ?</a></span>
+        </label>
+        <input type="password" id="password" name="password" placeholder="**************" required>
+        <div class="button-login">
+          <button type="submit">Sing in</button>
+        </div>
+      </form>
+      <p class="signUp">I don’t have an account ? <a href="/" class="openRegisterModal">Sign up</a></p>
+    </div>
+  </div>
+
+  <!-- Modal Register -->
+  <div class="modal registerModal" id="registerModal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <div class="logo" href="/">design<span>agency</span></div>
+      <p>Welcome back !!!</p>
+      <h1>Sing up</h1>
+      <form>
+        <label for="register-email">
+          <span>Email</span>
+        </label>
+        <input type="email" id="register-email" name="register-email" placeholder="email@gmail.com" required>
+        <label class="password" for="register-password">
+          <span>Password</span>
+        </label>
+        <input type="password" id="register-password" name="register-password" placeholder="**************" required>
+        <div class="button-login">
+          <button type="submit">Sing up</button>
+        </div>
+      </form>
+      <p class="signUp">If you have an account ? <a href="/" class="openLoginModal">Sign in</a></p>
+    </div>
+  </div>
 
   <script type="module" src="./dist/bundle.js" defer></script>
 </body>
