improve: implementar scrool suave nos links da barra de navegacao e footer

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <section class="section-hero" data-anime="100" class="fadeInDown">
     <div class="container">
       <header>
-        <nav>
+        <nav class="nav">
           <a class="logo" href="/">design<span>agency</span></a>
           <ul class="menu" id="myLinks">
             <li class="dropdown">
@@ -356,12 +356,12 @@
         </div>
         <div class="footer-column-2">
           <h2 data-anime="200" class="fadeInLeft">Quick Links</h2>
-          <ul data-anime="100" class="fadeInDown">
+          <ul data-anime="100" class="fadeInDown nav">
             <li>
               <a href="#numbers">services</a>
             </li>
             <li>
-              <a href="#portfolio">portfolio</a>
+              <a href="#services">portfolio</a>
             </li>
             <li>
               <a href="#about">about us</a>
