improve: adicionar o babel-loader ao projeto

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="container">
       <header>
         <nav class="nav">
-          <a class="logo" href="/">design<span>agency</span></a>
+          <div class="logo" onclick="window.location.reload(true)">design<span>agency</span></div>
           <ul class="menu" id="myLinks">
             <li class="dropdown">
               <div class="dropbtn nav-link">services <i class="bi bi-chevron-down"></i></div>
