--- a/index.html
+++ b/index.html
@@ -53,11 +53,12 @@
               <div id="navMobile" class="overlay">
                 <span class="closebtn" onclick="closeNav()">&times;</span>
                 <div class="overlay-content">
-                  <a href="#services">Services</a>
-                  <a href="#about">About</a>
-                  <a href="#contact">Contact</a>
-                  <div class="openLoginModal nav-link">Login</div>
-                  <div class="openRegisterModal nav-link">Register</div>
+                  <a class="logo nav-link" href="#hero">design<span>agency</span></a>
+                  <a class="nav-link" href="#services">Services</a>
+                  <a class="nav-link" href="#about">About</a>
+                  <a class="nav-link" href="#contact">Contact</a>
+                  <div class="openLoginModalMobile nav-link">Login</div>
+                  <div class="openRegisterModalMobile nav-link">Register</div>
                 </div>
               </div>
               <span class="icon-menu-hamburguer" onclick="openNav()">
