improve: atualizar o head do projeto

--- a/index.html
+++ b/index.html
@@ -23,6 +23,21 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   </noscript>
 
+  <!-- SEO: Open Graph tags para redes sociais -->
+  <meta property="og:title" content="Design Agency">
+  <meta property="og:description" content="Business Design Solutions for modern companies.">
+  <meta property="og:image" content="./img/landing-page.jpg">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://jeffersonsouuza.github.io/design-agency/">
+
+  <!-- Twitter Card tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Design Agency">
+  <meta name="twitter:description" content="Business Design Solutions for modern companies.">
+  <meta name="twitter:image" content="./img/landing-page.jpg">
+
+  <meta name="theme-color" content="#20b15a">
+
   <title>Design Agency</title>
 </head>
 
